<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="590dp"
    android:orientation="vertical"
    android:gravity="center" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="480dp"
	    android:orientation="vertical"
	    android:gravity="center">
	    
	    <ImageView 
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:src="@drawable/empty_completed_icon">
	        
	    </ImageView>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/You_have_no"
	        android:layout_marginTop="10dp"
	        android:textSize="@dimen/track_your_fix_small_text_size"
	        android:textColor="@color/whitish_grey"/>
	    
	     <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Completed"
	        android:textSize="@dimen/track_your_fix_small_text_size"
	        android:textColor="@color/whitish_grey"/>
	      <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Cancelled"
	        android:textSize="@dimen/track_your_fix_small_text_size"
	        android:textColor="@color/whitish_grey"/>
	    
	</LinearLayout>
    
    
</LinearLayout>
