<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10" >

    <include layout="@layout/custom_action_bar"/>   
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/margin_nxormal"
            android:layout_marginTop="5dp"
            android:layout_weight="2.5" >

            <ImageView
                android:id="@+id/customer_create_account_icon"
                android:layout_width="fill_parent"
                android:layout_height="105dp"
                android:layout_gravity="center"
                android:src="@drawable/icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textview_one_step_closer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3E3E3E"
                android:text="@string/One_step_closer_to_getting_your"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/home_fixed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Home_Fixed"
                android:textColor="#3E3E3E"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:layout_weight="1.2" >

            <EditText
                android:id="@+id/edittext_emailaddress"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:editable="false"
                android:background="@drawable/editext_grey_stroke"
                android:hint="@string/hint_Email_Address"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:layout_weight="1.2"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edittext_firstname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:background="@drawable/editext_grey_stroke"
                android:hint="@string/hint_First_name"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edittext_last_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_grey_stroke"
                android:hint="@string/hint_Last_name"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_weight="1.2" >

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/editext_grey_stroke"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:imeOptions="actionDone"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_weight="1.2" >

            <Button
                android:id="@+id/button_next"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/Verify_Phone_Number"
                 android:background="@drawable/green_button_rounded_corners"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_weight="1.2" >
       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:textColor="#737373"
                android:text="By Clicking Next, you agree to our "
                />
            <TextView
                android:id="@+id/textview_customer_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/dark_green"
                android:text="@string/customer"
                />
            </LinearLayout>
            
            <TextView
                android:id="@+id/tetview_customer_undertaking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="undertaking. "
                android:textColor="@color/dark_green"
                android:textSize="16dp" />

            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>