<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/custom_action_bar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="8.9"
        android:gravity="center|top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/customer_payment_selection_image"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/landing_page_icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/we_need_text"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_give_you__text"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_service_text"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="10" >

            <EditText
                android:id="@+id/first_name_for_service"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/editext_grey_stroke"
                android:hint="First Name"
                android:inputType="textMultiLine"
                android:padding="13dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/lastt_name_for_service"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/editext_grey_stroke"
                android:hint="Last Name"
                android:inputType="textMultiLine"
                android:padding="13dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.1"
        android:background="@drawable/green_button_rounded_corners"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/CustomTextStyle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>